se corrigio el problema del paso de parametros con el getter de la lista de credenciales